--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'Giphy PR Comment'
+name: 'Giphy PR Comment Mayank'
 description: 'Add a Giphy GIF comment to new pull requests.'
 inputs:
   github-token:
