--- a/action.yaml
+++ b/action.yaml
@@ -14,3 +14,8 @@ runs:
   args:
     - ${{ inputs.github-token }}
     - ${{ inputs.giphy-api-key }}
+
+
+branding: 
+  icon: 'award'
+  color: 'green'
